2003-1-26 Araki Ken <arakiken@users.sf.net>

	* Each user can start his/her own mlterm server.
	  (Thanks to Nakda Nobuyoshi san)

2003-1-26 MINAMI hirokazu <minami@chem.s.u-tokyo.ac.jp>

	* Fixed a bug in gdk-pixbuf module which prevents gamma correction
	  with pseudo-transparency (Thanks to TAKAHASHI Tamotsu san) 
	* Rewrited cache mechanism of background pictures for performance.
	
2003-1-26 Araki Ken <arakiken@users.sf.net>

	* Added -6/--stbs/static_backscroll_mode option, under which backscroll mode
	  isn't reset even if vt100 sequence is output from tty.
	* You can select region even while vt100 sequence is output from tty.

2003-1-13 Araki Ken <arakiken@users.sf.net>

	* config.h.in -> c_config.h.in

2003-1-13 Araki Ken <arakiken@users.sf.net>

	* ml_intl.h -> c_intl.h

2003-1-12 Araki Ken <arakiken@users.sf.net>

	* Multiple 'key=value' pairs separated by ';' can be specified
	  in "ESC ] 5379 ; .... BEL".
	* Newly added "ESC ] 5382 ; ... BEL sequence" and "ESC ] 5383 ; ... BEL sequence".
	  The former sequence saves specified key and value pairs in ~/.mlterm/main,
	  and the latter one sets and saves them at the same time.

2003-1-12 Araki Ken <arakiken@users.sf.net>

	* Cleaned up codes around arabic shaping.
	* Merged gettextize patch.
	  (Thanks to Mike Fabian and Koushi Takahashi san)

2003-1-12 Araki Ken <arakiken@users.sf.net>

	* 2.6.3 released.
	  (rel-2_6_3)

2002-12-16 Seiichi SATO <ssato@sh.rim.or.jp>

	* Applied Minami-san's Xft2 support patch.

2002-12-15 Araki Ken <arakiken@users.sf.net>

	* 2002-12-14 fix was incomplete, that is, copy&paste in the same window failed. fixed.
	  (Thanks to Martin Horcicka)

2002-12-14 Araki Ken <arakiken@users.sf.net>

	* Newline characters in pasted text are converted to carriage return characters.
	  (Thanks to Martin Horcicka)

2002-12-13 Araki Ken <arakiken@users.sf.net>

	* Fixed arabic combining problem.
	  (Thanks to Nadim Shaikli)

2002-12-13 Araki Ken <arakiken@users.sf.net>
